add bot status and agenda read APIS and update openapi.json
